--- a/проект/style.css
+++ b/проект/style.css
@@ -24,17 +24,17 @@ body{
     text-align: center;
     font-size: 0.9em;
 }
-#film1{
+#films{
     margin-left: 5%;
     padding: 0 0 0 0;
 }
-#film1,image{
+#films,image{
     width: 144px;
     height: 240px;
     background-color: aqua;
 
 }
-#film1,h1{
+#films,h1{
     margin-bottom: 0;
     margin-top: 0;
 }
