--- a/проект/style.css
+++ b/проект/style.css
@@ -15,10 +15,26 @@ header{
 #logo{
     margin: 0 0 0 0;
 }
+#logo_img{
+    float: right;
+    background-color: #222126;
+    height: 40px;
+    width: 40px;
+}
 body{
     padding: 0 0 0 0;
     margin: 0 0 0 0;
     background-color: #3B3B3B;
+    height: 100%;
+}
+.wraper{
+    display: flex;
+	flex-direction: column;
+	min-height: 100%;
+    position:relative
+}
+.content{
+    flex: 1 0 auto;
 }
 .name_page{
     text-align: center;
@@ -28,20 +44,26 @@ body{
     margin-left: 5%;
     padding: 0 0 0 0;
 }
-#films,image{
-    width: 144px;
-    height: 240px;
-    background-color: aqua;
+#films,img{
+    width: 324px;
+    height: 465px;
+    float: left;
 
 }
 #films,h1{
     margin-bottom: 0;
     margin-top: 0;
 }
+a{
+    text-decoration: none;
+    color:#C73F3F;
+}
 
 footer{
+    width: 100%;
     background-color: #222126;
     padding: 0 0 0 0;
     margin: 0 0 0 0 ;
     text-align: left;
+    flex: 0 0 auto;
 }
